--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                     data-target="#ident-{{$index}}" class="btn btn-success btn-sm editor"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>
                             </td>
                             <td>
-                                <button ng-click="killContact(contact)" class="btn btn-danger btn-sm deleter" data-href="/delete.php?id=54" data-toggle="modal" data-target="#confirm-delete">
+                            <button ng-click="killContact(contact)" class="btn btn-danger btn-sm deleter" data-href="/delete.php?id=54" data-toggle="modal" data-target="#confirm-delete">
                                   <span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
                             </td>
                         </tr>
@@ -111,7 +111,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="label-{{$index}}">Edit Trans: {{row.discription}}</h4>
+                <h4 class="modal-title" id="label-{{$index}}">Edit Transation: {{row.description}}</h4>
             </div>
             <div class="modal-body">
                 <form>
