--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <th>Description</th>
                             <th>Type</th>
                             <th>Amount Credit</th>
-                            <th>Amount Credit</th>
+                            <th>Amount Debit</th>
                             <th>Running Balance</th>
                             <th>Edit</th>
                             <th>Delete</th>
